[java] Handle array of tables. Remove jtoml.